<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_searchBusStop"
            android:icon="@drawable/bus_stop_icon"
            android:title="@string/searchBusStop" />
        <item
            android:id="@+id/nav_searchLine"
            android:icon="@drawable/bus_line"
            android:title="@string/searchLine" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/map" />

    </group>


    <item android:title="@string/aboutApp">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>


</menu>