<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".lineSearch"
    tools:openDrawer="start">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/main">

        <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/menu"
        app:title="@string/searchLine"
        app:titleTextColor="@color/main_3" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/main_3"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <!-- Obrazek Avatara -->

        <ImageView
            android:id="@+id/avatarMichal"
            android:layout_width="310dp"
            android:layout_height="420dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/avatarDescription"
            app:srcCompat="@drawable/awatarmichal1" />

        <!-- Tekst etykiety Przystanku -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signingTextPlaceholder" />

        <TextView
            android:id="@+id/busStopLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/baloo"
            android:padding="5dp"
            android:text="@string/busLineSearchDescription"
            android:textAlignment="center"
            android:textColor="@color/main"
            android:textSize="20sp" />

        <!-- Pole tekstowe dla nazwy przystanku -->

            <!-- LinearLayout z przyciskami wyszukiwania i nawigacji -->
            <EditText
                android:id="@+id/lineNumber"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/busLinePlaceholder"
                android:inputType="number" />

            <EditText
                android:id="@+id/lineBusStop"
                android:layout_width="248dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/busLineStopPlaceholder"
                android:inputType="text" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/main"
                    android:onClick="GoTo_LineResult"
                    android:text="@string/searchButton"
                    android:textColor="@color/main_3" />

        </LinearLayout>

        <!-- Przycisk powrotu -->
            <Button
                android:id="@+id/goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="GoTo_MainActivity"
                android:text="@string/GoBackButton"
                android:textColor="@color/main_3" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>