<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/busStopImage"
        android:layout_width="94dp"
        android:layout_height="99dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="712dp"
        android:contentDescription="@string/busStopDescription"
        android:onClick="GoTo_busStopSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bus_stop" />

    <TextView
        android:id="@+id/busStopNameText"
        android:layout_width="276dp"
        android:layout_height="75dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="724dp"
        android:gravity="center"
        android:onClick="GoTo_busStopSearch"
        android:text="@string/busStopPlaceholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatarMichal"
        android:layout_width="310dp"
        android:layout_height="420dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/avatarDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/awatarmichal1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="568dp"
        android:gravity="center_horizontal"
        android:text="@string/signingTextPlaceholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>