<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".busStopSearch"
    tools:openDrawer="start">

    <!-- Główna zawartość ekranu w ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu"
            app:title="@string/searchBusStop"
            app:titleTextColor="@color/main_3" />

        <!-- LinearLayout zawierający resztę komponentów -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorSurface"
            android:orientation="vertical"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Obrazek Avatara -->

            <!-- Tekst etykiety Przystanku -->
            <VideoView
                android:id="@+id/videoView3"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/baloo"
                android:gravity="center_horizontal"
                android:text="@string/signingTextPlaceholder"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/busStopLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/baloo"
                android:padding="5dp"
                android:text="@string/busStopSearchDescription"
                android:textAlignment="center"
                android:textColor="@color/main"
                android:textSize="20sp" />

            <!-- Pole tekstowe dla nazwy przystanku -->
            <AutoCompleteTextView
                android:id="@+id/busStopName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/busStopPlaceholder"
                android:inputType="text"
                android:textColor="?attr/colorControlHighlight"/>

            <!-- LinearLayout z przyciskami wyszukiwania i nawigacji -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/main"
                    android:onClick="GoTo_busStopResult"
                    android:text="@string/searchButton"
                    android:textColor="@color/main_3" />

                <Button
                    android:id="@+id/navigationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/main_2"
                    android:onClick="GoTo_Naviagtion"
                    android:text="@string/navigationButton"
                    android:textColor="@color/main_3" />
            </LinearLayout>

            <!-- Przycisk powrotu -->
            <Button
                android:id="@+id/goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="GoTo_MainActivity"
                android:text="@string/GoBackButton"
                android:textColor="@color/main_3" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- NavigationView dla menu bocznego -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
