<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".busStopResult"
    tools:openDrawer="start">

    <!-- Główna zawartość ekranu -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu"
            app:title="@string/searchBusStop"
            app:titleTextColor="@color/main_3" />

        <!-- VideoView -->
        <VideoView
            android:id="@+id/videoView6"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <!-- Nazwa przystanku -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal"
            android:text="@string/signingTextPlaceholder"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/videoView6" />

        <TextView
            android:id="@+id/currentBusStopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/baloo"
            android:hint="@string/busStopPlaceholder"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <!-- Nagłówek -->
        <TextView
            android:id="@+id/resultsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/busStopResultsLabel"
            android:textColor="?attr/colorSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentBusStopName" />

        <!-- Linia wyników -->
        <LinearLayout
            android:id="@+id/resultsHeaderLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/resultsHeader">

            <TextView
                android:id="@+id/timeRemainingHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/baloo"
                android:text="@string/departureHeader"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lineNumberHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/baloo"
                android:text="@string/lineHeader"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/directionHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/baloo"
                android:text="@string/directionHeader"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- ScrollView dla wyników -->
        <ScrollView
            android:id="@+id/resultsScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/resultsHeaderLine"
            app:layout_constraintBottom_toTopOf="@id/goBackButton"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/resultsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Wyniki dynamiczne -->
            </LinearLayout>
        </ScrollView>

        <!-- Przycisk powrotu -->
        <Button
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="GoTo_busStopSearch"
            android:text="@string/GoBackButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- NavigationView dla menu bocznego -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
